--- a/LI2/latex/interface_8h.tex
+++ b/LI2/latex/interface_8h.tex
@@ -323,7 +323,7 @@ Função que mostra todas as jogadas efetuadas até ao momento em que o utilizad
 \hline
 \end{DoxyParams}
 \begin{quote}
-Coloca jogadas anteriores no ficheiro. \end{quote}
+Obtem o numero do jogador atual e, dependedo desse numero, decide se tem de imprimir um ou dois movimentos numa dada jogada. \end{quote}
 
 
 Definido na linha 170 do ficheiro interface.\+c.
