listas ligadas e documentação

--- a/LI2/latex/files.tex
+++ b/LI2/latex/files.tex
@@ -4,6 +4,8 @@ Lista de todos os ficheiros documentados com uma breve descrição\+:\begin{Doxy
 \item\contentsline{section}{\mbox{\hyperlink{dados_8h}{dados.\+h}} }{\pageref{dados_8h}}{}
 \item\contentsline{section}{{\bfseries interface.\+c} }{\pageref{interface_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{interface_8h}{interface.\+h}} }{\pageref{interface_8h}}{}
+\item\contentsline{section}{{\bfseries lista.\+c} }{\pageref{lista_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{lista_8h}{lista.\+h}} }{\pageref{lista_8h}}{}
 \item\contentsline{section}{{\bfseries logica.\+c} }{\pageref{logica_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{logica_8h}{logica.\+h}} }{\pageref{logica_8h}}{}
 \item\contentsline{section}{{\bfseries main.\+c} }{\pageref{main_8c}}{}
