--- a/LI2/latex/refman.tex
+++ b/LI2/latex/refman.tex
@@ -182,9 +182,11 @@
 \input{struct_c_o_o_r_d_e_n_a_d_a}
 \input{struct_e_s_t_a_d_o}
 \input{struct_j_o_g_a_d_a}
+\input{structnodo}
 \chapter{Documentação do ficheiro}
 \input{dados_8h}
 \input{interface_8h}
+\input{lista_8h}
 \input{logica_8h}
 %--- End generated contents ---
 
